Letterspace small caps.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -189,9 +189,9 @@
 
 \fntext{tt-1}{%
   One of the main subjects of Ring’s book is a \gis{} that describes “heard scale
-degrees,” and does not include harmony at all; see \headlesscite[41--99, and
-throughout]{rings:2011}. Lewin provides several examples of non-harmonic \gis{}s
-in \headlesscite[16--24]{lewin:gmit}.}
+  degrees,” and does not include harmony at all; see \headlesscite[41--99, and
+  throughout]{rings:2011}. Lewin provides several examples of non-harmonic
+  \gis{}es in \headlesscite[16--24]{lewin:gmit}.}
 
 \fntext{tt-2}{%
   As evidenced in part by the number of books published in the last several
@@ -262,8 +262,8 @@ in \headlesscite[16--24]{lewin:gmit}.}
 
 \fntext{ds-3a}{%
   \emph{GMIT} contains many terms that Lewin renders in all capitals; I have
-rendered them here in small capitals in order to reduce their typographical
-impact.}
+  rendered them here in small capitals (except when quoting directly) in order
+  to reduce their typographical impact.}
 
 \fntext{ds-3b}{%
   In chromatic pitch space, we might say that the interval between C4 and A3
@@ -300,7 +300,7 @@ impact.}
   \cite[172--77]{hook:2007gmit}.}
 
 \fntext{ds-7}{%
-  Ramon Satyendra describes the two attitudes as being noun-oriented (\gis{}s)
+  Ramon Satyendra describes the two attitudes as being noun-oriented (\gis{}es)
   vs. verb-oriented (transformations); \headlesscite[102--3]{satyendra:2004}.}
 
 \fntext{ds-8}{%
