--- a/ch1.tex
+++ b/ch1.tex
@@ -694,7 +694,7 @@ of the book:
   Given locations s and t in our space, this attitude does not ask for some
   observed measure of extension between reified “points”; rather it asks: “If
   I am \emph{at} s and wish to get to t, what characteristic gesture
-  (e.g.~member of STRANS) should I perform in order to arrive
+  (e.g.~member of \strans) should I perform in order to arrive
   there?\fn{ds-6}
 \end{quoting}
 
@@ -725,7 +725,7 @@ using the mechanism Lewin describes just before the famous passage in
 
 By combining the space S of a \gis{} with an operation-group on S, we can derive
 a transformational system. This operation-group must be simply transitive on S
-(hence the reference to STRANS in the quote above): “given any elements s and
+(hence the reference to \strans\ in the quote above): “given any elements s and
 t of S, then there exists a unique member OP of STRANS such that OP(s) =
 t.”\footcite[157]{lewin:gmit} Lewin then states that in any \gis{}, “there is a
 unique transposition-operation T satisfying T(s) = T, namely T =
@@ -894,7 +894,7 @@ Throughout \emph{GMIT}, Lewin is clear that transformational theory is a means
 of expressing our “intuitions” about a musical passage in a mathematically
 rigorous way.\fn{ds-16} As he puts it: “If I want to change Gestalt 1 into
 Gestalt 2 \ldots, what sorts of admissible transformations in my space
-(members of STRANS or otherwise) will do the best
+(members of \strans\ or otherwise) will do the best
 job?”\footcite[159]{lewin:gmit} Our explication of diatonic seventh-chord
 spaces may appear to stem from the desire to label everything a $t_3$ and move
 on, confident that we could justify our lables mathematically if called upon
