--- a/ch1.tex
+++ b/ch1.tex
@@ -532,7 +532,7 @@ examples.
 \subsection{Intervals and Transformations}
 \label{subsec:inttrans} % {{{{
 
-Figure \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
+Example \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
 on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians sometimes refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
 in the G-minor diatonic collection.\fn{ds-2b} As in classical music, the leading
@@ -541,13 +541,13 @@ Dm7.\fn{ds-2} We can easily arrange this progression around the familiar
 circle of fifths, placing the tonic G minor at the top of the circle (see
 Figure \ref{ds:circle-of-fifths}).
 
-\figBeg
+\exBeg[thbp]
   \centerGraphic{eps/ch1/autumn-leaves-changes.pdf}
   \caption{The changes to “Autumn Leaves” (Joseph Kosma), A section.}
   \label{ds:autumn-leaves-changes}
-\figEnd
+\exEnd
 
-\figBeg
+\figBeg[htbp]
   \centerGraphic{eps/ch1/circle-of-fifths.pdf}
   \caption{The changes to “Autumn Leaves,” arranged around the diatonic circle
     of fifths.}
@@ -748,7 +748,7 @@ statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
 want to emphasize the idea of a transformation as a mapping operation.
 
 Now that we have explored the underlying mathematics, we are in a position to
-reexamine the A section of “Autumn Leaves,” (as given in Figure
+reexamine the A section of “Autumn Leaves,” (as given in Example
 \ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths arrangement
 in Figure \ref{ds:circle-of-fifths}. The progression is, quite simply, a
 series of $t_3$ operations within the G-minor diatonic space; each chord root
@@ -786,7 +786,7 @@ theorists.
 
 Before concluding this chapter, I want to examine “Autumn Leaves” in a bit
 more detail, then move on to a few other analytical examples. The full chord
-changes to “Autumn Leaves” are given in Figure
+changes to “Autumn Leaves” are given in Example
 \ref{ds:autumn-leaves-complete}. The opening A section, discussed at length
 above, can be understood as a series of $t_3$ operations in the G-minor
 diatonic set. The bridge modulates to the relative major, but we can still
@@ -798,11 +798,11 @@ this modulation, the connections from chord to chord are all $t_3$ operations,
 continuing the chain that has been present since the beginning (see Figure
 \ref{ds:autumn-leaves-bridge}).\fn{ds-11a}
 
-\figBeg[htbp]
+\exBeg[h!tbp]
   \centerGraphic{eps/ch1/autumn-leaves-complete.pdf}
   \caption{The complete changes to “Autumn Leaves.”}
   \label{ds:autumn-leaves-complete}
-\figEnd
+\exEnd
 
 \figBeg[htbp]
   \vspace{\baselineskip}
@@ -854,7 +854,7 @@ Leaves” (though Bart Howard’s “Fly Me to the Moon” comes close); instead
 pieces often make use of diatonic cycles in only a portion of a piece before
 moving on to contrasting music. A relatively straightforward example of this
 is Sammy Fain and Bob Hilliard’s “Alice in Wonderland,” the changes to which
-are shown in Figure \ref{ds:wonderland-changes}.\fn{ds-13} Like “Autumn
+are shown in Example \ref{ds:wonderland-changes}.\fn{ds-13} Like “Autumn
 Leaves,” “Alice in Wonderland” begins with a minor diatonic cycle in mm.~1--7
 (also beginning on a iv chord), shown here in A minor. We can modify our \gis{}
 from above simply by changing the set ($S$ is now the set \{\h{Am}, \h{Bm7b5},
@@ -863,12 +863,12 @@ interval function are identical.\fn{ds-13a} The harmony in m.~7 is an \h{Am7} ch
 but because the quality of the tonic seventh chord is ambiguous in minor
 keys, this chord is easily understood as tonic.
 
-\figBeg[htbp]
+\exBeg[htbp]
   \centerGraphic{eps/ch1/wonderland-changes.pdf}
   \caption{Changes to “Alice in Wonderland” (Sammy Fain/Bob Hilliard), mm.\
   1--16.}
   \label{ds:wonderland-changes}
-\figEnd
+\exEnd
 
 The second eight measures are all diatonic in the key of C major; the linking
 \h{Eb7} chord signals a shift between diatonic collections.\fn{ds-14} This
@@ -924,7 +924,7 @@ is a relatively unusable tonal progression.
 \figEnd
 
 Nevertheless, Earl Zindars’s standard “How My Heart Sings” (the changes to
-which are given in Figure \ref{ds:heart-sings-changes}) does indeed contain a
+which are given in Example \ref{ds:heart-sings-changes}) does indeed contain a
 major-key cycle.\fn{ds-17} Unlike the previous two examples, this tune begins
 on the iii chord, at which point it begins the $t_3$ cycle. Once again, it is
 the \h{Am7} chord that alerts us that this progression takes place in
@@ -933,11 +933,11 @@ harmonic sense, as the dominant of the following D minor). After reaching the
 tonic in m.~5, the $t_3$s continue making their way to A minor, four measures
 later.
 
-\figBeg[htbp]
+\exBeg[htbp]
   \centerGraphic{eps/ch1/heart-sings-changes.pdf}
   \caption{Changes to “How My Heart Sings” (Earl Zindars), mm.~1--12.}
   \label{ds:heart-sings-changes}
-\figEnd
+\exEnd
 
 Notably, the chord in m.~8 is an \h{E7b9}---this chord belongs not to C major,
 but rather to A minor. At some point, then, the progression shifts from taking
@@ -955,17 +955,17 @@ appears first as a minor seventh and again later as a dominant of the relative
 minor.
 
 One more example will suffice to conclude our discussion of diatonic cycles:
-Jerome Kern’s “All the Things You Are” (the changes are given in Figure
+Jerome Kern’s “All the Things You Are” (the changes are given in Example
 \ref{ds:all-things-changes}).\fn{ds-18a} Though this tune does not contain a
 cycle as explicit as the examples we have seen so far, viewing this piece
 through the lens of diatonic seventh chord space reveals relationships that may
 otherwise go unnoticed.
 
-\figBeg[htbp]
+\exBeg[htbp]
   \centerGraphic{eps/ch1/all-things-changes.pdf}
   \caption{Changes to “All the Things You Are” (Jerome Kern).}
   \label{ds:all-things-changes}
-\figEnd
+\exEnd
 
 “All the Things You Are” begins in the key of F minor, and progresses through
 a diatonic cycle (a chain of $t_3$ operations in an F-minor diatonic
@@ -1042,8 +1042,6 @@ detriment of long-range hearing, in this case the \gis{} framework developed
 above allows us to hear over longer distances where chord-to-chord connections
 may fail to do so (while, crucially, still recognizing the importance of
 chord-to-chord connections for a jazz musician aiming to “make the changes”).
-
-% xxx more here on All the Things?
 
 % xxx This will need to be rewritten once everything else is done
 
