--- a/front.tex
+++ b/front.tex
@@ -132,6 +132,11 @@ defense date
 
 \clearpage
 \phantomsection
+\addcontentsline{toc}{section}{List of Examples}
+\listofexamples
+
+\clearpage
+\phantomsection
 \addcontentsline{toc}{section}{List of Figures}
 \listoffigures
 
