Use old-style nums most places.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -18,7 +18,7 @@
 \fntext{pja-2a}{%
   As Scott DeVeaux puts it, bebop is “both the source of the present \ldots\
   and the prism through which we absorb the past. To understand jazz, one must
-  understand bebop.”\headlesscite[3]{deveaux:1997}}
+  understand bebop.” \headlesscite[3]{deveaux:1997}.}
 
 \fntext{pja-2b}{%
   This is not meant to imply that “chromatic harmony” is not tonal; rather,
