--- a/ch1.tex
+++ b/ch1.tex
@@ -125,7 +125,7 @@ hypothetical set of chords that we can use as a basis for understanding the
 many variations that might occur in actual performance.\fn{pja-3c} These
 changes represent a sort of Platonic model of a composition; individual
 performances of “Autumn Leaves” can be seen as instances of some ideal
-“\textsc{Autumn Leaves}.” Determining these ideal changes is often a process
+\textsc{Autumn Leaves}. Determining these ideal changes is often a process
 of mediating published lead sheets, recorded versions, and other sources;
 throughout this study I have tried to clarify exactly \emph{what} harmony I am
 analyzing in any given example.\fn{pja-4a}
@@ -536,8 +536,8 @@ Example \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
 on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians sometimes refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
 in the G-minor diatonic collection.\fn{ds-2b} As in classical music, the leading
-tone is raised in the dominant chord so that the resulting chord is D7, not
-Dm7.\fn{ds-2} We can easily arrange this progression around the familiar
+tone is raised in the dominant chord so that the resulting chord is \h{D7}, not
+\h{Dm7}.\fn{ds-2} We can easily arrange this progression around the familiar
 circle of fifths, placing the tonic G minor at the top of the circle (see
 Figure \ref{ds:circle-of-fifths}).
 
