Typography yak-shaving

--- a/front.tex
+++ b/front.tex
@@ -16,7 +16,10 @@
 
   \vspace*{\fill}
   \keepthetitle
-  \MakeUppercase{\Title}
+  {
+    \addfontfeatures{LetterSpace=3.5}
+    \MakeUppercase{\Title}
+  }
 
   \vspace{\baselineskip}
   Michael McClimon
@@ -101,7 +104,10 @@ defense date
   Michael McClimon
 
   \vspace{\baselineskip}
-  \MakeUppercase{\Title}
+  {
+    \addfontfeatures{LetterSpace=3.5}
+    \MakeUppercase{\Title}
+  }
 \end{center}
 
 \doublespacing
