Minor fixes for notes.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -56,11 +56,12 @@
   The “head” is what jazz musicians call the statements of the melody in the
   course of a jazz performance. This melody is typicall played once at the
   beginning of a performance and again at the end (often referred to as the
-  “out head.”}
+  “out head”).}
 
 \fntext{pja-4a}{%
-  In places where I refer to a “tune” generically, I have tried to provide at
-  least two references to relatively straight-ahead recorded examples.}
+  In places where I refer to a “tune” generically, I have provided at
+  least two references to relatively straight-ahead recorded examples in the
+  appendix.}
 
 \fntext{pja-4}{%
   The Thelonious Monk Institute of Jazz maintains a web page on the history of
