More minor edits, proofing.

--- a/ch1.tex
+++ b/ch1.tex
@@ -59,7 +59,7 @@ style.\fn{pja-2a}
 Now that we have delineated “jazz,” we should explain exactly what we mean by
 “harmony.” Harmony is of course one of the oldest topics in music theory, and
 as such has been hotly contested throughout its history. It is often
-found in opposition to couterpoint; in this view, counterpoint is concerned
+found in opposition to counterpoint; in this view, counterpoint is concerned
 with individual melodic voices, while harmony is concerned with individual
 verticalities. In other traditions (most notably the Schenkerian tradition),
 harmony is understood to be an outgrowth of counterpoint: verticalities arise
@@ -71,7 +71,7 @@ When jazz musicians refer to “harmony,” they are typically referring to the
 changes themselves; that is, the chord symbols given on a lead sheet or
 arrangement. Even when they are not playing from sheet music, the chord symbol
 is the basic unit of harmonic understanding for jazz musicians. The reason for
-this is largly practical: a chord symbol is a concise way of referring to a
+this is largely practical: a chord symbol is a concise way of referring to a
 particular sound, and improvising musicians must be able to understand this
 information quickly (when reading) and to recall it easily (when improvising).
 
@@ -94,7 +94,7 @@ standards which may have originated elsewhere, we might wonder whether should
 we analyze the original sources. In many cases, however, the “jazz standard”
 version may be significantly different from the original version, reflecting a
 history of adaptation by generations of jazz musicians.\fn{pja-3b} To make
-matters worse for the aspiring academic, this knowledge is often secret
+matters worse for the hopeful academic, this knowledge is often secret
 knowledge, not written down and learned only from more experienced musicians.
 
 Many published jazz analyses rely on transcriptions of particular performances
@@ -221,7 +221,7 @@ music, these theorists are interested in showing its connection to the
 European classical tradition by using the same techniques to analyze both of
 them. This is especially important to note, since Schenkerian analysis has a
 well-known ethical component.\footcite{cook:1989} For Schenker, the
-compositions that were well-described by his theory were judged by him to be
+compositions that were well-described by his theory were judged to be
 masterworks. By showing that jazz compositions can also be understood with
 these Schenkerian techniques, the implicit conclusion is that they too should
 be judged to be masterworks. Underlying these orthodox approaches, I think, is
@@ -240,7 +240,7 @@ and thus we should not feel obligated to adhere to traditional Schenkerian
 techniques.\footcite[7]{martin:2011}
 
 Martin draws in part on James McGowan’s “dialects of consonance” in jazz,
-which defines different contextually stable notes of the tonic triad.\fn{ta-5}
+which describes different contextually stable notes of the tonic triad.\fn{ta-5}
 McGowan argues that consonance in jazz is stylistically defined, and that in
 certain styles we might hear extended tones as consonances, even though they
 would be dissonant in classical music. He describes three “principal dialects”:
@@ -265,7 +265,7 @@ chord-scales via these triads.
 
 Other important non-Schenkerian models of jazz harmony are found in earlier
 works of Martin and Strunk. In his dissertation, Martin advocates a syntactic
-approach based on the circle of fifths, in which chains of decending fifths
+approach based on the circle of fifths, in which chains of descending fifths
 point towards a tonic pitch.\fn{ta-8} Steven Strunk’s early theory of jazz
 harmony is a layered approached that draws on the Schenkerian concept of
 analytical levels to uncover a single tonal center for a jazz
@@ -337,7 +337,7 @@ a basic structure in mind while playing:
 \begin{quoting}
   \singlespacing
   McPartland: Well, when you say structure, you mean like, one chorus in a
-  certain style, another \ldots
+  certain style, another~\ldots
 
   \vspace{\baselineskip} \noindent
   Evans: No, I’m talking about the abstract, architectural thing, like the
@@ -353,7 +353,7 @@ I think that Larson’s use of Schenker’s methods to analyze the music of Bill
 Evans is well justified, but I am less sure of the extent to which they are
 applicable to jazz more generally. Larson anticipates this objection, noting
 that it might be offered on two grounds: “first, that Evans was unusually
-talented as an improvisor; and second, that his way of thinking was radicially
+talented as an improviser; and second, that his way of thinking was radically
 different from that of other jazz musicians.”\footcite[239]{larson:1998}
 Certainly Evans was not a typical jazz musician: he was white, and studied at
 the Mannes College of Music, then and now a cradle of Schenkerian activity in
@@ -365,7 +365,7 @@ primarily with music before that time (or at least, with musicians whose style
 was well established by that time).\fn{ta-14}
 
 Larson allows that the first objection is justified: “That Evans was an
-unusually talented improvisor---and that Schenkerian analysis can show
+unusually talented improviser---and that Schenkerian analysis can show
 this---is a principle argument of this article.”\footcite[239]{larson:1998}
 This statement is representative of the legitimizing enterprise of the
 application of Schenker’s methods to jazz mentioned above. It also contains a
@@ -426,7 +426,7 @@ supreme mastery of the music.\fn{ta-16}
 \section{Transformational Theory}
 \label{sec:transformational-theory} %{{{
 
-Given the current dominance of Schenkerian theory in the field of jazz
+Given the current dominance of Schenkerian theory in the study of jazz
 harmony, we might ask what transformational thinking brings to the table.
 Transformational theory in recent years has focused on neo-Riemannian
 analysis, with particular emphasis on efficient voice leading and
@@ -502,7 +502,7 @@ category are more general approaches for relating set classes of different
 cardinalities, including Joseph Straus’s formulation of atonal voice leading
 and Clifton Callender’s split and fuse
 operations.\footcites{straus:2003,callender:1998} Finally, Dmitri Tymoczko’s
-continuous tetrachordal space can accomodate \emph{all} four-note chords, but,
+continuous tetrachordal space can accommodate \emph{all} four-note chords, but,
 as Hook notes, Tymoczko downplays (and sometimes ignores) the transformational
 aspects of his geometric models.\fn{tt-6}
 
@@ -560,7 +560,7 @@ sense, it can also represent what Lewin has called a Generalized Interval System
 “directed measurements, distances, or motions” that we often understand as
 “characteristic textural features” of a given musical
 space.\footcite[16]{lewin:gmit} Though we will unpack this definition using
-the the harmonies from the A section of “Autumn Leaves” as an example, Lewin’s
+the harmonies from the A section of “Autumn Leaves” as an example, Lewin’s
 formal definition is as follows:
 \begin{quoting}
   \singlespacing
@@ -573,7 +573,7 @@ formal definition is as follows:
     \item For all r, s, and t in S, \mbox{int(r,s)int(s,t) = int(r,t)}
     \item For every s in S and every i in IVLS, there is a unique t in S which
       lies the interval i from s, that is a unique t which satisfies the
-      equation \mbox{int(s,t) = i}.\footcite[Definition 2.3.1 (26)]{lewin:gmit}
+      equation \mbox{int(s,t) = i}.\fn{ds-2c}
   \end{compactenum}
 \end{quoting}
 
@@ -588,7 +588,7 @@ collection: \mbox{$S =$ \{\h{Gm},} \h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7},
 \h{EbM7}, \h{F7}\}.\fn{ds-3}
 
 With the first element of a \gis{} satisfied, we must then define a group of
-intervals (\ivls).\fn{ds-3a} Though we could perhaps imagine a number of
+intervals (\ivls). Though we could perhaps imagine a number of
 different ways to define intervals among elements of the set S (a point to
 which we will return later), the most obvious is to measure distances in
 diatonic steps between chord roots. Because we are interested in abstract
@@ -603,7 +603,7 @@ mod-12.
 
 Lewin specifies that \ivls{} must be a mathematical group, and we will take care
 here to show that \ivls{} = $\{0,1,\ldots,6\}$ is indeed such a group. A group
-is a set of elements, $G$, and a binary operation, $\otimes$, that satisies the
+is a set of elements, $G$, and a binary operation, $\otimes$, that satisfies the
 four group axioms:
 \begin{compactitem}
   \singlespacing
@@ -620,15 +620,15 @@ four group axioms:
 
 To show that our \ivls{} is a group, it is sufficient to show that the set
 $\{0,1,\ldots,6\}$ under some binary operation satisfies the group axioms. The
-binary operation is simply addition mod-7 (we will notate using the usual $+$
+binary operation is simply addition mod-7 (which we will notate using the usual $+$
 sign instead of the abstract $\otimes$ used above).  We can then show that the
 set \ivls{} is closed: for any two elements $a, b \in \mathrm{\ivls{}}$, $a + b$ is
 also an element of \ivls{} ($1 + 3 = 4; 4 + 4 = 1; 1 + 0 = 1$; and so on).
 Modular addition, like its non-modular counterpart, is associative:
 $(3 + 4) + 5 = 3 + (4 + 5)$, and likewise for any chosen elements of \ivls{}.
-The identity element for addition is 0, which combined with any element $a \in
+The identity element for addition is $0$, which combined with any element $a \in
 \mathrm{\ivls{}}$ gives $a$ itself. Inverses in the group are simply complements
-mod-7 (the number that when added to the given number gives 0, mod-7):
+mod-7 (the number that when added to the given number gives $0$, mod-7):
 $2^{-1} = 5; 1^{-1} = 6$; and so on. The integers modulo $n$ are labeled
 $\intZ_n$, so we may also refer to \ivls{} in our “Autumn Leaves” example as
 the group $\intZ_7$.
@@ -638,21 +638,21 @@ The last element of a \gis{} is an interval function that maps $S \times S$ into
 member of the group $\intZ_7$. In our “Autumn Leaves” example, the interval
 from one element of S to another is simply the number of steps in the G-minor
 diatonic collection (always counting upward) between the two elements. Thus,
-\mbox{int(\h{D7}, \h{Gm}) = 3}, since G, the root of the second chord, lies
+\mbox{int(\h{D7}, \h{Gm}) = $3$}, since G, the root of the second chord, lies
 3 diatonic steps above D, the root of the first. Likewise,
-\mbox{int(\h{Am7b5}, \h{BbM7}) = 1}; \mbox{int(\h{F7}, \h{EbM7}) = 6}; and so
+\mbox{int(\h{Am7b5}, \h{BbM7}) = $1$}; \mbox{int(\h{F7}, \h{EbM7}) = $6$}; and so
 on.
 
 We now have all of the elements of a \gis{}, but we must still prove that Lewin’s
 conditions A and B are satisfied, which we will do by example. Condition A
 states that for all r, s, and t in S, \mbox{int(r,s)int(s,t) = int(r,t)}. In
-our “Autumn Leaves” example, \mbox{int(Cm7, D7)} and \mbox{int(D7, \h{EbM7})}
-(both interval 1) must combine to equal \mbox{int(Cm7, \h{EbM7})} (interval
+our “Autumn Leaves” example, \mbox{int(\h{Cm7}, \h{D7})} and \mbox{int(\h{D7}, \h{EbM7})}
+(both interval 1) must combine to equal \mbox{int(\h{Cm7}, \h{EbM7})} (interval
 2). Second, for every chord $s$ in S and every interval $i$ in $\intZ_7$,
 there must be a unique chord $t$ which satisfies the equation \mbox{int$(s,t)
-= i$}. For example, there must be exactly one chord that lies $2$ units above
+= i$}. For example, there must be exactly one chord that lies 2 units above
 \h{Cm7}: namely, \h{EbM7}. It is easy to confirm that the two conditions
-are also true for any choice of r, s, t $\in$ S.
+are also true for any choice of $r, s, t \in$ S.
 
 Before shifting our focus from generalized intervals to transformations, I
 want to return to the structure of \ivls{}, the group $\intZ_7$. Above, we
@@ -664,12 +664,12 @@ could therefore label the group in question $\mathcal{C}_7$.) Counting
 diatonic steps is not the only way we might consider measuring intervals in
 the space, however. Given the ubiquitous descending fifths of “Autumn Leaves,”
 we might instead like to measure distance by the number of descending fifths
-between chord roots. Though this generation has no noticable effect on the
+between chord roots. Though this generation has no noticeable effect on the
 abstract group structure of \ivls{}---the group is $\mathcal{C}_7$ in either
 case---it does affect the last element of a \gis{}, the interval
 function.\fn{ds-5} As shown in Figure \ref{ds:c7-generators},
-\mbox{int(\h{Am7b5}, D7) = 3} when measured by diatonic steps (the left
-figure), but \mbox{int(\h{Am7b5}, D7) = 1} when measured by descending fifths
+\mbox{int(\h{Am7b5}, \h{D7}) = $3$} when measured by diatonic steps (the left
+figure), but \mbox{int(\h{Am7b5}, \h{D7}) = $1$} when measured by descending fifths
 (the right figure).\fn{ds-5a}
 
 \figBeg
@@ -694,7 +694,7 @@ of the book:
   Given locations s and t in our space, this attitude does not ask for some
   observed measure of extension between reified “points”; rather it asks: “If
   I am \emph{at} s and wish to get to t, what characteristic gesture
-  (e.g.~member of \strans) should I perform in order to arrive
+  (e.g.~member of TRANS) should I perform in order to arrive
   there?\fn{ds-6}
 \end{quoting}
 
@@ -707,7 +707,7 @@ root of \h{Am7b5} by three diatonic steps gives \h{D7}.” The transformational
 statement is more active, replacing distance metrics with verbs like
 “transpose.”\fn{ds-7}
 
-Though there is certainly a difference in the language used in \gis{} statments
+Though there is certainly a difference in the language used in \gis{} statements
 and that used in transformational statements, Lewin takes care to note that
 the two attitudes are not diametrically opposed:
 \begin{quoting}
@@ -739,7 +739,7 @@ only slightly more complicated, since ordinary transposition will not work
 intuitively. To avoid confusion with the traditional transposition operator,
 we will instead use the lowercase, $t_k$.\fn{ds-9} This diatonic transposition
 operator will be used in almost the same way, however: the operation $t_k$ is
-that tranposition which transposes the root of a chord $k$ steps inside the
+that transposition which transposes the root of a chord $k$ steps inside the
 G-minor diatonic collection. With this understanding, the conversion works as
 expected: the interval between \h{Am7b5} and \h{D7} is 3, so the operator
 $t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{Gm},}
@@ -748,18 +748,18 @@ statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
 want to emphasize the idea of a transformation as a mapping operation.
 
 Now that we have explored the underlying mathematics, we are in a position to
-reexamine the A section of “Autumn Leaves,” (as given in Example
-\ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths arrangement
-in Figure \ref{ds:circle-of-fifths}. The progression is, quite simply, a
-series of $t_3$ operations within the G-minor diatonic space; each chord root
-descends by diatonic fifth. In a mod-12 chromatic space (like the ones we
-will begin developing in the next chapter) it can be difficult to make sense
-of this harmonic progression. The chord qualities can be confusing---two major
-sevenths in a row followed immediately by a half-diminished seventh---and it
-is sometimes hard to remember where the tritone in the bass falls in the
-progression, given the prevalence of perfect-fifth bass motion in chromatic
-space. Understood in the context of this diatonic space, however, the harmonic
-motion becomes much clearer.
+reexamine the A section of “Autumn Leaves,” (as given in
+Example~\ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths
+arrangement in Figure~\ref{ds:circle-of-fifths}. The progression is, quite
+simply, a series of $t_3$ operations within the G-minor diatonic space; each
+chord root descends by diatonic fifth. In a mod-12 chromatic space (like the
+ones we will begin developing in the next chapter) it can be difficult to make
+sense of this harmonic progression. The chord qualities can be confusing---two
+major sevenths in a row followed immediately by a half-diminished
+seventh---and it is sometimes hard to remember where the tritone in the bass
+falls in the progression, given the prevalence of perfect-fifth bass motion in
+chromatic space. Understood in the context of this diatonic space, however,
+the harmonic motion becomes much clearer.
 
 It is reasonable to pause at this point and ask what advantages this
 transformational approach brings. After all, we began our discussion of
@@ -879,7 +879,7 @@ annotations in Figure \ref{ds:wonderland-transformations}). After a C-major
 \tf\ in mm.~9--10, the harmony moves up a step to \h{Em7}--\h{Am7}.\fn{ds-15}
 The progression \h{G7}--\h{Em7} seems to move backwards in the cycle, almost
 as if realizing the phrase is in danger of arriving at C major too soon. We
-can capture this intution by choosing to understand the progression not as a
+can capture this intuition by choosing to understand the progression not as a
 forward-directed $t_5$, but as an algebraically-equivalent combination of
 three ascending fifths ($t_3^{-1} + t_3^{-1} + t_3^{-1}$).
 
@@ -897,7 +897,7 @@ Gestalt 2 \ldots, what sorts of admissible transformations in my space
 (members of \strans\ or otherwise) will do the best
 job?”\footcite[159]{lewin:gmit} Our explication of diatonic seventh-chord
 spaces may appear to stem from the desire to label everything a $t_3$ and move
-on, confident that we could justify our lables mathematically if called upon
+on, confident that we could justify our labels mathematically if called upon
 to do so. This, though, could not be further from the truth; developing the
 space allows us a powerful means to capture intuitions (or apperceptions) like
 the one above. Though the operation $t_5$ does map \h{G7} to \h{Em7} in the
