--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -54,7 +54,7 @@
 
 \fntext{pja-3d}{%
   The “head” is what jazz musicians call the statements of the melody in the
-  course of a jazz performance. This melody is typicall played once at the
+  course of a jazz performance. This melody is typically played once at the
   beginning of a performance and again at the end (often referred to as the
   “out head”).}
 
@@ -100,8 +100,8 @@
   its generic sense to stand for tonal music that participates in the Western
   art music tradition. This definition is imperfect, but is useful for
   distinguishing the music of Bach, Mozart, Beethoven, Schumann, and Wagner
-  from that of Ellington, Basie, Parker, Monk, and Coltrane. I am not
-  implying that jazz cannot participate in the Western art music tradition; certainly
+  from that of Ellington, Basie, Parker, Monk, and Coltrane. I do not mean to
+  imply that jazz cannot participate in the Western art music tradition; certainly
   at least some of it does.}
 
 \fntext{ta-4}{%
@@ -132,7 +132,7 @@
   and Martin’s articles appear in the \emph{Journal of Jazz
   Studies}/\emph{Annual Review of Jazz Studies} (the journal was renamed in
   1981), while more recent articles on jazz harmony have appeared in
-  theoretical journals: \emph{Music Theory Spectrum}, \emph{Journal of Music
+  music theory journals: \emph{Music Theory Spectrum}, \emph{Journal of Music
   Theory}, and the \emph{Dutch Journal of Music Theory}, for example. As jazz
   research has moved from the fringes into the theoretical mainstream, I think
   it has grown more removed from jazz practice
@@ -143,7 +143,7 @@
 \fntext{ta-10}{%
   This article appears with only slight changes as the second chapter of
   Larson’s book, \headlesscite{larson:2009}.  Garrett Michaelsen critiques
-  Schenkerian analysis in similar ways in his dissertation,
+  Schenkerian analysis in similar ways in
   \headlesscite[7--11]{michaelsen:2013}.}
 
 \fntext{ta-11}{%
@@ -226,7 +226,7 @@
 
 \fntext{tt-7}{%
   In particular, it will be useful to consider the II\h{m7b5} chord (a
-  half-diminished seventh) as a different type than the V7 chord (a dominant
+  half-diminished seventh) as a different type than the \h{V7} chord (a dominant
   seventh) given their different functional roles in jazz harmony, despite the
   fact that they are of the same set class.}
 
@@ -248,11 +248,17 @@
   and minor keys.}
 
 \fntext{ds-2}{%
-  In running text, dominant seventh chords are given with just a “7,” major
-  sevenths with “M7,” minor sevenths with “m7,” and half-diminished sevenths
+  In running text, dominant seventh chords are given with just a “\h{7},” major
+  sevenths with “\h{M7},” minor sevenths with “\h{m7},” and half-diminished sevenths
   with “\h{m7b5}”. In a minor key the tonic chord is often played with a
-  major seventh, which is indicated “mM7.” In examples, chord symbols
+  major seventh, which is indicated “\h{mM7}.” In examples, chord symbols
   typically follow conventions used by \emph{The Real Book}.}
+
+\fntext{ds-2c}{%
+  \cite[Definition 2.3.1 (26)]{lewin:gmit}. \emph{GMIT} contains many terms
+  that Lewin renders in all capitals; I have rendered them here in small
+  capitals (except when quoting directly) in order to reduce their typographical
+  impact.}
 
 \fntext{ds-3}{%
   The tonic harmony is given as it is in \emph{The Real Book}, simply as Gm.
@@ -260,11 +266,6 @@
   seventh (\h{GmM7}), a sixth (\h{Gm6}), or even a minor seventh (\h{Gm7}; this
   is less likely since minor seventh chords are most commonly ii chords, not
   tonics).}
-
-\fntext{ds-3a}{%
-  \emph{GMIT} contains many terms that Lewin renders in all capitals; I have
-  rendered them here in small capitals (except when quoting directly) in order
-  to reduce their typographical impact.}
 
 \fntext{ds-3b}{%
   In chromatic pitch space, we might say that the interval between C4 and A3
@@ -377,7 +378,7 @@
 \fntext{ds-18}{%
   Exactly which chord functions as the pivot is of little importance, so long
   as it happens before the E dominant seventh. I am inclined to hear the
-  \h{FM7} as a pivot (functioning simlutaneously as IV and VI), in order to
+  \h{FM7} as a pivot (functioning simultaneously as IV and VI), in order to
   keep both \tfo\ progressions (in C major and A minor) intact.}
 
 \fntext{ds-18a}{%
@@ -390,7 +391,7 @@
 \fntext{ds-19}{%
   Again, this implicit diatonicism has not gone unnoticed; Ahmad Jamal arrives
   emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
-  the Pershing, Vol. 2}.\nocite{jamal:pershing}}
+  the Pershing, Vol.~2}.\nocite{jamal:pershing}}
 
 \fntext{ds-20}{%
   If the linking dominant did not appear at the end of the bridge, we would see
