Add bib/discog. entries used for SMT paper.

--- a/discog.bib
+++ b/discog.bib
@@ -1,5 +1,16 @@
 % Discography
 
+@music{coleman:amsterdam,
+  author      = {Coleman, George},
+  title       = {Amsterdam After Dark},
+  userd       = {Timeless SJP 129,},
+  origdate    = {1979},
+  type        = {CD},
+  series      = {Reissued, Timeless Jazz Legacy},
+  number      = {TJL 74509},
+  year        = {2010},
+}
+
 @music{evans:heartsings,
   author      = {Evans, Bill},
   title       = {How My Heart Sings!},
@@ -54,4 +65,24 @@
                  1958}. Gambit},
   number      = {69264},
   year        = {2007},
+}
+
+@music{morgan:cornbread,
+  author      = {Morgan, Lee},
+  title       = {Cornbread},
+  userd       = {Blue Note BLP 4222,},
+  origdate    = {1965},
+  type        = {CD},
+  series      = {Reissued, Blue Note},
+  number      = {BNZ 109},
+  year        = {1988},
+}
+
+@music{rodney:bird,
+  author      = {Rodney, Red},
+  title       = {One for Bird},
+  type        = {CD},
+  series      = {Steeplechase},
+  number      = {SCCD 31238},
+  year        = {1989},
 }
