--- a/diss.bib
+++ b/diss.bib
@@ -45,6 +45,15 @@ Theory} }
   year        = {2012}
 }
 
+@unpublished{buchler:2010,
+  author      = {Buchler, Michael},
+  title       = {Are There Any Bad (or Good) Transformational Analyses?},
+  address     = {Indianapolis, IN},
+  month       = nov,
+  year        = {2010},
+  note        = smt
+}
+
 @article{callender:1998,
   author      = {Callender, Clifton},
   title       = {Voice-Leading Parsimony in the Music of Alexander Scriabin},
@@ -407,6 +416,14 @@ Theory} }
   address     = {Hillsdale, NY},
   publisher   = {Pendragon Press},
   year        = {2009}
+}
+
+@book{lerdahl:2004,
+  author      = {Lerdahl, Fred},
+  title       = {Tonal Pitch Space},
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  year        = {2004}
 }
 
 @book{levine:1995,
