Start work on chapter 2.
This is a big-ish commit. It contains some initial text/notes for
Chapter 2, as well as updates to the main diss file (adding ch. 2 as a
subfile), the bib file, and a graphics subproject update. This commit
also adds a \caph command, to set harmonies in captions using the
sans-serif caption font.

--- a/diss.bib
+++ b/diss.bib
@@ -1,6 +1,15 @@
 @string{smt = {paper presented at the annual meeting of the Society for Music
 Theory} }
 
+@book{aebersold:1974,
+  author      = {Aebersold, Jamey},
+  title       = {The II--V\textsuperscript{7}--I Progression},
+  address     = {New Albany, IN},
+  publisher   = {Jamey Aebersold Jazz},
+  year        = {1974},
+  series      = {Jamey Aebersold Play-A-Long Series, vol.~3}
+}
+
 @phdthesis{arthurs:2011,
   author      = {Arthurs, Daniel},
   title       = {Reconstructing Tonal Principles in the Music of {Brad
