Set definitions for ii-Vs.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -31,4 +31,9 @@
   \headlesscite[195--96 and throughout]{lewin:gmit}. See also
   \cite[6--8]{hook:2007}.}
 
+\fntext{tf-6}{%
+  Here and throughout this chapter, pitch classes are represented as mod-12
+  integers, with C $= 0$; all calculations are performed mod-12.}
+
+
 % }}}
