--- a/ch2.tex
+++ b/ch2.tex
@@ -101,6 +101,42 @@ graph).\footcite[7]{hook:2007} In Figure \ref{tf:single-tfo-graph}, the nodes
 are labeled simply $S_1$, $S_2$, and $S_3$, which we can understand as the
 sets of ii\tsup{7}, V\tsup{7}, and I\tsup{7} chords, respectively.
 
+While at its core the \tfo\ progression contains three types of seventh
+chords, in reality a jazz musician might add any number of extensions or
+alterations to this basic structure. Given this practice, defining the
+archetypal progression as being composed of four-note set classes seems
+unnecessarily restrictive. In order to allow for some freedom in the chord
+qualities, we will consider only chordal roots, thirds, and sevenths; these
+pitches are sufficient to distinguish the three chord qualities in a \tfo.
+
+In this chapter, we will represent a chord with an ordered triple $X = (x_1,
+x_2, x_3)$, where $x_1$ is the root of the chord, $x_2$ the third, and $x_3$
+the seventh. The definitions of the three sets are as follows:\fn{tf-6}
+
+\vspace{-3em} % xxx not sure why there’s so much space here
+\begin{align*}
+  S_1 &= \{ (x_1, x_2, x_3)\ |\ x_2 - x_1 = 3; x_3 - x_1 = 10 \} &
+    \text{ii\tsup{7} chords} \\ %
+  %
+  S_2 &= \{ (x_1, x_2, x_3)\ |\ x_2 - x_1 = 4; x_3 - x_1 = 10 \} &
+    \text{V\tsup{7} chords} \\ %
+  %
+  S_3 &= \{ (x_1, x_2, x_3)\ |\ x_2 - x_1 = 4; x_3 - x_1 = 11 \} &
+    \text{I\tsup{7} chords}
+\end{align*}
+\vspace{-3em}
+
+\noindent The definitions are intuitive, and have clear musical relevance:
+ii\tsup{7} chords have a minor third and minor seventh, V\tsup{7} chords have
+a major third and minor seventh, and I\tsup{7} chords have a major third and
+major seventh. Defining the chords this way rather than as four-note set
+classes offers the great advantage of flexibility. Using the ordered-triple
+representation, the progressions \h{Dm7}--\h{G7}--\h{Cmaj7} and
+\h{Dm9(b5)}--\h{G7b13s9b9}--\h{Cmaj7s11} are understood as equivalent, since
+the roots, thirds, and sevenths are the same: both progressions are
+represented $(2, 5, 0)$--$(7, 11, 5)$--$(0, 4, 11)$.
+
+
 
 % }}}
 
